[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyBKTR"
version = "0.1.1"
description = "Python implementation of the Scalable Spatiotemporally Varying Coefficient Modelling with Bayesian Kernelized Tensor Regression"
readme = "README.md"
authors = [
    {name = "Julien Lanthier", email = "julien.lanthier@hec.ca"},
    {name = "Mengying Lei"},
    {name = "Aurelie Labbe"},
    {name = "Lijun Sun"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10, <4"
dependencies = [
    "torch>=1.12.1",
    "numpy>=1.22.3",
    "pandas>=1.4.2",
    "plotly>=5.10.0",
    "formulaic>=0.5.2",
]

[project.urls]
"Homepage" = "https://github.com/julien-hec/pyBKTR"
"Bug Tracker" = "https://github.com/julien-hec/pyBKTR/issues"

[project.optional-dependencies]
dev = [
    "black==22.6.0",
    "flake8==4.0.1",
    "pre-commit==2.20.0",
    "Sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
    "nbsphinx==0.8.12",
    "kaleido==0.2.1",
]

[tool.black]
line-length = 99
skip-string-normalization = 1
extend-exclude = '''
(
  ^data/
  | ^docs/
)
'''

[tool.isort]
profile = "black"
line_length = 99

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["data/*.csv"]
