[flake8]
max-line-length = 99
ignore = E241, W503
count = true

[isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = pyBKTR
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[metadata]
name = pyBKTR
version = 0.1.0
description = Python implementation of the Scalable Spatiotemporally Varying Coefficient Modelling with Bayesian Kernelized Tensor Regression
long_description = file: README.md
url = https://github.com/julien-hec/pyBKTR
author = Mengying Lei, Aurelie Labbe, Lijun Sun, Julien Lanthier
author_email = julien.lanthier@hec.ca
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10, <4
install_requires = 
    torch>=1.11.0
    numpy>=1.22.3
    pandas>=1.4.2

[options.package_data]
* = data/*.csv
